idea/testData/multiplatform/diamondSeesTwoActuals/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in common (2 modules)'")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in common (2 modules)'")!>foo<!>(): Int
}